v2.1.16: fix emoji menu being too narrow in wide screen ( https://github.com/mustakshif/Asri/issues/30)

--- a/style/components/menu.scss
+++ b/style/components/menu.scss
@@ -121,6 +121,10 @@
                     background-color: transparent
                 }
             }
+
+            &>.emojis {
+                min-width: 50vw;
+            } // https://github.com/mustakshif/Asri/issues/30
         }
     }
 
